# backend/src/Chamados.Api/Models/Entities/TipoNotificacao.cs
@@ -1,0 +1,7 @@
+namespace Chamados.Api.Models.Entities;
+
+public enum TipoNotificacao
+{
+    SlaEmRisco,
+    SlaVencido
+}
